--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -17,8 +17,8 @@
             android:id="@+id/test_new_back_btn"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:padding="7dp"
             android:layout_gravity="center"
+            android:padding="7dp"
             android:src="@mipmap/lookleft_icon" />
 
         <master.flame.danmaku.ui.widget.DanmakuView
@@ -86,6 +86,7 @@
                         android:layout_weight="1"
                         android:textColor="@color/home_tab_backgroud"
                         android:textSize="18sp" />
+
                     <!--<TextView-->
                     <!--android:text="切换"-->
                     <!--android:textColor="@android:color/white"-->
@@ -95,13 +96,13 @@
                     <!--android:textSize="18sp"-->
                     <!--android:layout_width="wrap_content"-->
                     <!--android:layout_height="wrap_content" />-->
-                    <!--<ImageView-->
-                    <!--android:src="@mipmap/more_icon"-->
-                    <!--android:layout_margin="10dp"-->
-                    <!--android:layout_width="30dp"-->
-                    <!--android:id="@+id/room_share"-->
-                    <!--android:layout_gravity="center_vertical"-->
-                    <!--android:layout_height="30dp" />-->
+                    <ImageView
+                        android:id="@+id/iv_room_setting"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_margin="10dp"
+                        android:src="@mipmap/more_icon" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -125,9 +126,9 @@
                     <ImageView
                         android:id="@+id/follow_new_image"
                         android:layout_width="30dp"
-                        android:padding="4dp"
-                        android:layout_gravity="center_vertical"
                         android:layout_height="30dp"
+                        android:layout_gravity="center_vertical"
+                        android:padding="4dp"
                         android:src="@mipmap/follow_icon" />
 
                     <ImageView
@@ -197,8 +198,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
-
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <LinearLayout
             android:layout_width="match_parent"
