集成上麦和播放sdk   问题很多  。问了厦工意见  打算直接换阿里云上麦sdk  和七牛播放sdk   坑爹啊！！！

--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -57,6 +57,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
 
+                <SurfaceView
+                    android:id="@+id/sv_upmic"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:visibility="gone" />
+
                 <com.facebook.drawee.view.SimpleDraweeView
                     android:id="@+id/room_back_image"
                     android:layout_width="match_parent"
