--- a/app/src/main/res/layout/page_surface2.xml
+++ b/app/src/main/res/layout/page_surface2.xml
@@ -1,10 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <SurfaceView
-        android:id="@+id/surface2"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 
-</LinearLayout>
+        <com.pili.pldroid.player.widget.PLVideoTextureView
+            android:id="@+id/VideoView2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_centerInParent="true" />
+        <ImageView
+            android:id="@+id/iv_cover_2"
+            android:layout_width="match_parent"
+            android:src="@mipmap/roomspeen_photo"
+            android:scaleType="fitXY"
+            android:layout_height="match_parent" />
+</RelativeLayout>
