--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -48,4 +48,5 @@
     <color name="cc_black">#cc000000</color>
     <color name="green_626262">#626262</color>
     <color name="orange">#41ae3b</color>
+    <color name="transparent_50">#50000000</color>
 </resources>
