1、取消麦序列表的某人麦序功能 2、观众列表数据显示bug修复 （只保留一份统一数据）

--- a/app/src/main/res/layout/widget_bottom_layout.xml
+++ b/app/src/main/res/layout/widget_bottom_layout.xml
@@ -2,7 +2,7 @@
 <RadioGroup android:orientation="horizontal"
     android:id="@+id/main_bottom_radiogp"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/widget_bottom_height"
+    android:layout_height="45dp"
     android:background="@color/home_tab_backgroud"
     android:layout_alignParentBottom="true"
     xmlns:android="http://schemas.android.com/apk/res/android">
@@ -10,21 +10,25 @@
     <RadioButton
         style="@style/bottom_radio_btn"
         android:text="@string/bottom_radio_head"
+        android:paddingTop="5dp"
         android:drawableTop="@drawable/bottom_home_icon"
         />
     <RadioButton
         style="@style/bottom_radio_btn"
         android:text="@string/bottom_radio_direct"
+        android:paddingTop="5dp"
         android:drawableTop="@drawable/bottom_live_icon"
         />
     <RadioButton
         style="@style/bottom_radio_btn"
         android:text="@string/bottom_radio_look"
+        android:paddingTop="5dp"
         android:drawableTop="@drawable/bottom_follow_icon"
         />
     <RadioButton
         style="@style/bottom_radio_btn"
         android:text="@string/bottom_radio_mine"
+        android:paddingTop="5dp"
         android:drawableTop="@drawable/bottom_user_icon"
         />
 
