--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -58,6 +58,7 @@
                 android:layout_width="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginLeft="10dp"
+                android:padding="4dp"
                 android:scaleType="fitXY"
                 android:layout_gravity="center_vertical"
                 android:layout_height="15dp" />
