--- a/app/src/main/res/layout/page_surface.xml
+++ b/app/src/main/res/layout/page_surface.xml
@@ -2,8 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/cc_black"
     android:orientation="vertical">
 
+    <RelativeLayout
+        android:id="@+id/rll_video_view1"
+        android:layout_width="match_parent"
+        android:background="@color/cc_black"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true">
 
         <com.pili.pldroid.player.widget.PLVideoTextureView
             android:id="@+id/VideoView1"
@@ -14,10 +21,12 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:layout_centerInParent="true" />
-        <ImageView
-            android:id="@+id/iv_cover_1"
-            android:layout_width="match_parent"
-            android:src="@mipmap/roomspeen_photo"
-            android:scaleType="fitXY"
-            android:layout_height="match_parent" />
+    </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/iv_cover_1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        android:src="@mipmap/roomspeen_photo" />
 </RelativeLayout>
