--- a/app/src/main/res/layout-land/activity_test.xml
+++ b/app/src/main/res/layout-land/activity_test.xml
@@ -31,8 +31,8 @@
                 <RelativeLayout
                     android:id="@+id/rll_video_land_view1"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_centerInParent="true">
+                    android:layout_centerInParent="true"
+                    android:layout_height="match_parent">
 
                     <com.pili.pldroid.player.widget.PLVideoTextureView
                         android:id="@+id/pl_video_1"
@@ -68,8 +68,8 @@
                     <RelativeLayout
                         android:id="@+id/rll_video_land_view2"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_centerInParent="true">
+                        android:layout_centerInParent="true"
+                        android:layout_height="match_parent">
 
                         <com.pili.pldroid.player.widget.PLVideoTextureView
                             android:id="@+id/pl_video_2"
@@ -99,8 +99,7 @@
                     <RelativeLayout
                         android:id="@+id/rll_video_land_view3"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_centerInParent="true">
+                        android:layout_height="match_parent">
 
                         <com.pili.pldroid.player.widget.PLVideoTextureView
                             android:id="@+id/pl_video_3"
