--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -36,6 +36,7 @@
                 <ImageView
                     android:src="@mipmap/search_icon"
                     android:layout_width="22dp"
+                    android:layout_marginLeft="10dp"
                     android:layout_height="match_parent" />
                 <EditText
                     android:id="@+id/search_edittext"
@@ -47,15 +48,17 @@
                 <ImageView
                     android:id="@+id/search_edit_clear"
                     android:src="@mipmap/del"
-                    android:layout_width="20dp"
+                    android:padding="10dp"
+                    android:layout_width="30dp"
                     android:layout_height="match_parent" />
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
         <TextView
             android:id="@+id/search_to_search"
-            android:textSize="18sp"
+            android:textSize="16dp"
             android:layout_marginRight="15dp"
+            android:layout_marginLeft="10dp"
             android:layout_gravity="center_vertical"
             android:textColor="@color/home_tab_backgroud"
             android:layout_width="wrap_content"
