--- a/app/src/main/res/layout/item_eplist_gridview.xml
+++ b/app/src/main/res/layout/item_eplist_gridview.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:padding="10dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="10dp">
+
     <ImageView
         android:id="@+id/strate_grid_image"
         android:layout_width="50dp"
-        android:layout_height="50dp" />
+        android:layout_height="50dp"
+        android:padding="5dp" />
+
     <TextView
-        android:text="送TA礼物"
         android:id="@+id/strate_grid_text"
-        android:gravity="center"
         android:layout_width="60dp"
+        android:layout_height="50dp"
+        android:gravity="center"
         android:paddingTop="10dp"
-        android:layout_height="50dp" />
+        android:text="1" />
 </LinearLayout>
