1、房间页面滑动切换1 2 3麦，显示当前麦主播名称，没有主播则显示“当前麦没有主播 2、支付宝充值页面重新制作

--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -12,9 +12,10 @@
         android:layout_height="@dimen/setting_reheight">
         <ImageView
             android:id="@+id/history_back_btn"
-            android:layout_margin="@dimen/setting_image_margin"
             android:layout_centerVertical="true"
             android:src="@mipmap/lookleft_icon"
+            android:padding="6dp"
+            android:layout_marginLeft="10dp"
             android:layout_width="@dimen/setting_image_width"
             android:layout_height="30dp" />
         <TextView
