--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -109,7 +109,7 @@
             android:orientation="horizontal"
             android:layout_height="match_parent">
             <TextView
-                android:textSize="20sp"
+                android:textSize="18dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:textColor="@android:color/white"
