--- a/app/src/main/res/layout/activity_recharge.xml
+++ b/app/src/main/res/layout/activity_recharge.xml
@@ -1,161 +1,322 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/color_main"
+    android:orientation="vertical"
     tools:context=".ui.RechargeActivity">
+
     <RelativeLayout
-        android:background="@color/bottom_radio_checked_text"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/recharge_reheight">
+        android:layout_height="46dp"
+        android:background="@color/color_main">
+
         <ImageView
             android:id="@+id/recharge_back_btn"
-            android:layout_centerVertical="true"
-            android:src="@mipmap/lookleft_icon"
             android:layout_width="@dimen/recharge_image_width"
-            android:layout_height="@dimen/recharge_image_width" />
+            android:layout_height="@dimen/recharge_image_width"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:padding="8dp"
+            android:src="@mipmap/lookleft_icon" />
+
         <TextView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/recharge_tvheight"
             android:gravity="center"
-            android:textSize="20sp"
             android:text="@string/recharge_center"
             android:textColor="@color/home_tab_backgroud"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/recharge_tvheight" />
+            android:textSize="18dp" />
     </RelativeLayout>
 
-    <View
-        android:background="@color/my_center_line"
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/line_height"
-        />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal">
-        <TextView
-            android:id="@+id/recharge_user_tv"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="60dp"
+            android:background="@drawable/ic_pay_bg"
             android:gravity="center"
-            android:layout_width="0dp"
-            android:background="@drawable/tv_shape"
-            android:text="@string/recharge_page"
-            android:layout_height="match_parent"
-            android:layout_weight="1"/>
-        <TextView
-            android:id="@+id/recharge_kbi_tv"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:textColor="#d10000"
-            android:background="@drawable/tv_shape"
-            android:text="余额: 0 k币"
-            android:layout_height="match_parent" />
-    </LinearLayout>
+            android:orientation="vertical"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp">
+
+            <TextView
+                android:id="@+id/recharge_kbi_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:text="0"
+                android:textColor="@color/orange_f1a94e"
+                android:textSize="28dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="账户余额"
+                android:textColor="@color/gray_a"
+                android:textSize="12dp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginTop="20dp"
+                android:background="@color/gray_dan" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp">
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_pay_nk" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="23dp"
+                    android:text="100000"
+                    android:textColor="@color/gray_deep"
+                    android:textSize="14dp" />
+
+                <TextView
+                    android:id="@+id/tv_pay_1"
+                    android:layout_width="70dp"
+                    android:layout_height="23dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/shap_rec_30dp_login_phone"
+                    android:gravity="center"
+                    android:text="¥ 1.00"
+                    android:textColor="@color/color_main"
+                    android:textSize="12dp"
+                    tools:ignore="RtlCompat" />
+            </RelativeLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:background="@color/gray_dan" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp">
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_pay_nk" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="23dp"
+                    android:text="600000"
+                    android:textColor="@color/gray_deep"
+                    android:textSize="14dp" />
+
+                <TextView
+                    android:id="@+id/tv_pay_6"
+                    android:layout_width="70dp"
+                    android:layout_height="23dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/shap_rec_30dp_login_phone"
+                    android:gravity="center"
+                    android:text="¥ 6.00"
+                    android:textColor="@color/color_main"
+                    android:textSize="12dp" />
+            </RelativeLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:background="@color/gray_dan" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp">
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_pay_nk" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@+id/imageView"
+                    android:layout_toEndOf="@+id/imageView"
+                    android:layout_toRightOf="@+id/imageView"
+                    android:text="3000000"
+                    android:textColor="@color/gray_deep"
+                    android:textSize="14dp" />
+
+                <TextView
+                    android:id="@+id/tv_pay_30"
+                    android:layout_width="70dp"
+                    android:layout_height="23dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/shap_rec_30dp_login_phone"
+                    android:gravity="center"
+                    android:text="¥ 30.00"
+                    android:textColor="@color/color_main"
+                    android:textSize="12dp" />
+            </RelativeLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:background="@color/gray_dan" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp">
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_pay_nk" />
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="23dp"
+                    android:text="9800000"
+                    android:textColor="@color/gray_deep"
+                    android:textSize="14dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@+id/textView3"
+                    android:layout_centerHorizontal="true"
+                    android:text="赠送10金币"
+                    android:textColor="@color/gray_a"
+                    android:textSize="10dp"
+                    android:visibility="gone" />
+
+                <TextView
+                    android:id="@+id/tv_pay_98"
+                    android:layout_width="70dp"
+                    android:layout_height="23dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/shap_rec_30dp_login_phone"
+                    android:gravity="center"
+                    android:text="¥ 98.00"
+                    android:textColor="@color/color_main"
+                    android:textSize="12dp" />
+            </RelativeLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:background="@color/gray_dan" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp">
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_pay_nk" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="23dp"
+                    android:text="29800000"
+                    android:textColor="@color/gray_deep"
+                    android:textSize="14dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="赠送20金币"
+                    android:textColor="@color/gray_a"
+                    android:textSize="10dp"
+                    android:visibility="gone" />
+
+                <TextView
+                    android:id="@+id/tv_pay_298"
+                    android:layout_width="70dp"
+                    android:layout_height="23dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/shap_rec_30dp_login_phone"
+                    android:gravity="center"
+                    android:text="¥ 298.00"
+                    android:textColor="@color/color_main"
+                    android:textSize="12dp" />
+            </RelativeLayout>
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="120dp"
+            android:layout_height="90dp"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/ic_pay_logo" />
+    </RelativeLayout>
+
     <TextView
-        android:layout_marginTop="10dp"
-        android:text="@string/recharge_money_number"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <LinearLayout
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <RadioGroup
-            android:id="@+id/recharge_group"
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <RadioButton
-                android:id="@+id/recharge_5"
-                android:button="@null"
-                android:layout_marginLeft="10dp"
-                android:checked="true"
-                android:text="@string/_50b"
-                android:background="@drawable/recharge_select"
-                android:layout_width="120dp"
-                android:layout_height="70dp"
-                />
-            <RadioButton
-                android:id="@+id/recharge_10"
-                android:button="@null"
-                android:layout_marginLeft="10dp"
-                android:text="@string/_110b"
-                android:background="@drawable/recharge_select"
-                android:layout_width="120dp"
-                android:layout_height="70dp"
-                />
-            <RadioButton
-                android:id="@+id/recharge_20"
-                android:button="@null"
-                android:layout_marginLeft="10dp"
-                android:text="@string/_220b"
-                android:background="@drawable/recharge_select"
-                android:layout_width="120dp"
-                android:layout_height="70dp"
-                />
-            <RadioButton
-                android:id="@+id/recharge_50"
-                android:button="@null"
-                android:layout_marginTop="80dp"
-                android:layout_marginLeft="-380dp"
-                android:text="@string/_575b"
-                android:background="@drawable/recharge_select"
-                android:layout_width="110dp"
-                android:layout_height="70dp"
-                />
-            <RadioButton
-                android:id="@+id/recharge_100"
-                android:button="@null"
-                android:layout_marginTop="80dp"
-                android:layout_marginLeft="10dp"
-                android:text="@string/_1200b"
-                android:background="@drawable/recharge_select"
-                android:layout_width="130dp"
-                android:layout_height="70dp"
-                />
-            <RadioButton
-                android:id="@+id/recharge_200"
-                android:button="@null"
-                android:layout_marginTop="80dp"
-                android:layout_marginLeft="10dp"
-                android:text="@string/_2400b"
-                android:background="@drawable/recharge_select"
-                android:layout_width="130dp"
-                android:layout_height="70dp"
-                />
-        </RadioGroup>
-
-    </LinearLayout>
-    <Button
-        android:id="@+id/recharge_confirm_btn"
-        android:layout_margin="10dp"
-        android:text="@string/confirm_pay"
-        android:background="#9EEA6A"
-        android:layout_width="match_parent"
-        android:layout_height="50dp" />
-
-    <TextView
-        android:text="友情提示:"
-        android:layout_marginLeft="10dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
-        android:textSize="18sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:textSize="18sp"
-        android:layout_marginTop="10dp"
-        android:text="1. 人民币和K币比例=1:100000"
-        android:textColor="@color/home_room_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:textSize="18sp"
-        android:layout_marginTop="10dp"
-        android:text="2. 如有疑问,您可以咨询QQ15888620878"
-        android:textColor="@color/home_room_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:text="已阅读并同意《用户充值协议》"
+        android:textColor="@color/gray_deep"
+        android:textSize="14dp" />
 </LinearLayout>
+
