--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -2,10 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ll_room_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:keepScreenOn="true"
-    android:id="@+id/ll_room_content"
     android:orientation="vertical"
     tools:context=".ui.RoomActivity">
 
@@ -62,8 +62,7 @@
                     android:id="@+id/sv_upmic"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:visibility="gone"
-                   />
+                    android:visibility="gone" />
             </com.fubang.lihaovv.view.ScaleLayout>
 
             <com.fubang.lihaovv.view.ScaleLayout
@@ -95,13 +94,7 @@
                     <!--android:textSize="18sp"-->
                     <!--android:layout_width="wrap_content"-->
                     <!--android:layout_height="wrap_content" />-->
-                    <ImageView
-                        android:id="@+id/iv_room_setting"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:layout_gravity="center_vertical"
-                        android:layout_margin="10dp"
-                        android:src="@mipmap/more_icon" />
+
                 </LinearLayout>
 
                 <LinearLayout
@@ -128,38 +121,54 @@
                         android:textSize="20sp" />
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_alignParentBottom="true"
-                    android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/room_new_id_test"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginLeft="25dp"
-                        android:layout_weight="1"
-                        android:text="房间号"
-                        android:textColor="@color/home_tab_backgroud"
-                        android:textSize="18sp" />
+                <RelativeLayout
+                    android:id="@+id/rll_control_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
                     <ImageView
-                        android:id="@+id/follow_new_image"
+                        android:id="@+id/iv_room_setting"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
+                        android:layout_alignParentRight="true"
                         android:layout_gravity="center_vertical"
-                        android:padding="4dp"
-                        android:src="@mipmap/follow_icon" />
-
-                    <ImageView
-                        android:id="@+id/test_new_full"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
                         android:layout_margin="10dp"
-                        android:src="@mipmap/full" />
-                </LinearLayout>
+                        android:src="@mipmap/more_icon" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_alignParentBottom="true"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/room_new_id_test"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="10dp"
+                            android:layout_weight="1"
+                            android:text="房间号"
+                            android:textColor="@color/home_tab_backgroud"
+                            android:textSize="14dp" />
+
+                        <ImageView
+                            android:id="@+id/follow_new_image"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_gravity="center_vertical"
+                            android:padding="4dp"
+                            android:src="@mipmap/follow_icon" />
+
+                        <ImageView
+                            android:id="@+id/test_new_full"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="10dp"
+                            android:src="@mipmap/full" />
+                    </LinearLayout>
+                </RelativeLayout>
             </com.fubang.lihaovv.view.ScaleLayout>
         </RelativeLayout>
 
@@ -168,6 +177,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
+
             android:orientation="vertical">
 
             <android.support.design.widget.TabLayout
@@ -244,8 +254,8 @@
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:clickable="true"
-                android:visibility="gone"
-                android:src="@mipmap/room_face_icon" />
+                android:src="@mipmap/room_face_icon"
+                android:visibility="gone" />
 
             <LinearLayout
                 android:layout_width="0dp"
