--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -49,6 +49,7 @@
                 android:layout_marginLeft="8dp"
                 android:layout_gravity="center_vertical"
                 android:text="热门主播"
+                android:visibility="gone"
                 android:textColor="@color/home_room_text"
                 android:textSize="16sp"
                 android:layout_width="wrap_content"
@@ -59,6 +60,7 @@
                 android:layout_marginRight="20dp"
                 android:layout_marginLeft="10dp"
                 android:padding="4dp"
+                android:visibility="gone"
                 android:scaleType="fitXY"
                 android:layout_gravity="center_vertical"
                 android:layout_height="15dp" />
