--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -49,4 +49,14 @@
     <color name="green_626262">#626262</color>
     <color name="orange">#41ae3b</color>
     <color name="transparent_50">#50000000</color>
+    <color name="orange_f1a94e">#f1a94e</color>
+    <color name="gray_dan">#f4f4f4</color>
+    <color name="gray_edit_bg">#fdf8f5</color>
+    <color name="yellow_dan">#FFFBDC</color>
+    <color name="gray_bg">#f5fbfb</color>
+    <color name="red">#FF0000</color>
+    <color name="female_red">#d37ba3</color>
+    <color name="male_rblue">#758ae7</color>
+    <color name="gray_deep">#647072</color>
+    <color name="color_main">#24d7c8</color>
 </resources>
